k3d-cluster-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app.kubernetes.io/name: proxy-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: proxy-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxy-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
#          - containerPort: 443
