k3d-cluster-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: proxy-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
#    - port: 443
#      protocol: TCP
#      name: https

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: prometheus-service
#  labels:
#    app.kubernetes.io/name: proxy
#spec:
#  ports:
#  - protocol: TCP
#    port: 80
#    targetPort: 9376
